Bug 1115477 - Fix -Wunused and -Wtype-limits warnings in js/src. r=jandem